k8s/inventory-apm-server-service-dns.yaml
apiVersion: v1
kind: Service
metadata:
  name: elastic-apm-server
  namespace: inventory
spec:
  type: ExternalName
  externalName: apm-server.elastic.svc.cluster.local
