k8s/inventory-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: inventory-ingress
  namespace: inventory
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: api.inventory.steffbeckers.eu
      http:
        paths:
          - path: /
            backend:
              serviceName: inventory-api
              servicePort: 80
  tls:
    - hosts:
        - api.inventory.steffbeckers.eu
      secretName: steffbeckers.eu-tls
